# clarity

./: .gitmodules  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: crypto_bench.rs  transaction_bench.rs
clarity/: Cargo.toml
clarity/benches/: crypto_bench.rs
clarity/src/: abi.rs  address.rs  context.rs  contract.rs  error.rs  lib.rs  opcodes.rs  private_key.rs  raw_private_key.rs  rlp.rs  signature.rs  transaction.rs  utils.rs
clarity/tests/transaction_tests/: main.rs  stats.rs  structs.rs  test.rs
soliloquy/: Cargo.toml
soliloquy/contract/: Cargo.toml
soliloquy/contract/contract-abigen/: Cargo.toml
soliloquy/contract/contract-abigen/src/: contract.rs  lib.rs  util.rs  verbatim.rs
soliloquy/contract/contract-abigen/src/contract/: errors.rs  events.rs  methods.rs  structs.rs  types.rs
soliloquy/contract/contract-abigen/src/source/: mod.rs
soliloquy/contract/contract-derive/: Cargo.toml
soliloquy/contract/contract-derive/src/: abi_ty.rs  abigen.rs  call.rs  calllike.rs  codec.rs  display.rs  eip712.rs  error.rs  event.rs  lib.rs  utils.rs
soliloquy/contract/src/: base.rs  call.rs  call_core.rs  contract.rs  error.rs  event.rs  event_core.rs  factory.rs  lib.rs  log.rs  stream.rs
soliloquy/core/: Cargo.toml
soliloquy/core/src/: lib.rs
soliloquy/core/src/abi/: mod.rs  raw.rs  struct_def.rs  tokens.rs
soliloquy/core/src/abi/human_readable/: lexer.rs  mod.rs
soliloquy/core/src/macros/: mod.rs  soliloquy_crate.rs
soliloquy/json-abi/: Cargo.toml
soliloquy/json-abi/src/: abi.rs  item.rs  utils.rs
soliloquy/json-abi/tests/: abi.rs
soliloquy/json-abi/tests/it/: test.rs
soliloquy/sol-contract/: Cargo.toml
soliloquy/sol-contract/src/: call.rs  error.rs  eth_call.rs  event.rs  instance.rs  interface.rs  multicall.rs
soliloquy/sol-macro/: Cargo.toml
soliloquy/sol-macro-expander/: Cargo.toml
soliloquy/sol-macro-input/: Cargo.toml
soliloquy/sol-macro/src/: lib.rs
soliloquy/sol-macro/src/expand/: mod.rs  utils.rs  verbatim.rs
soliloquy/sol-macro/src/expand/expander/: contract.rs  enum.rs  error.rs  event.rs  function.rs  macros.rs  mod.rs  struct.rs  to_abi.rs  ty.rs  udt.rs  var_def.rs
soliloquy/sol-macro/src/input/: expander.rs  json.rs  mod.rs  sol_input.rs
soliloquy/sol-type-parser/: Cargo.toml
soliloquy/src/json-abi/: Cargo.toml
soliloquy/src/sol-macro/: Cargo.toml
soliloquy/src/sol-macro-expander/: Cargo.toml
soliloquy/syn-solidity/: Cargo.toml
soliloquy/syn-solidity/src/: lib.rs
soliloquy/syn-solidity/src/item/: function.rs
soliloquy/syn-solidity/tests/: contracts.rs
soliloquy/syn-solidity/tests/contracts/: ForgeStd.patch  PrbMath.patch  UniswapV2Factory.patch  UniswapV2Pair.patch  UniswapV3Factory.patch  UniswapV3Pool.patch  UniswapV3PoolDeployer.patch
src/: abi.rs  address.rs  constants.rs  context.rs  error.rs  lib.rs  opcodes.rs  private_key.rs  raw_private_key.rs  rlp.rs  signature.rs  transaction.rs  types.rs  utils.rs
src/abi/: contract.rs  function.rs  input.rs  item.rs  mod.rs  operation.rs  output.rs  state_mutability.rs
src/rlp/: de.rs  error.rs  mod.rs  rlp.rs  ser.rs
src/serde_rlp/: de.rs  error.rs  mod.rs  rlp.rs  ser.rs
tests/: testnet_tests.rs  transaction_tests.rs
tests/transaction_tests/: main.rs  structs.rs
web30/: Cargo.toml
web30/examples/: deploy_from_json.rs
web30/src/: althea_db_utils.rs  amm.rs  client.rs  contract_deployment.rs  erc20_permit.rs  erc20_utils.rs  erc721_utils.rs  eth_wrapping.rs  event_utils.rs  gas_estimator.rs  lib.rs  mem.rs  types.rs
web30/src/amm/: mod.rs  router.rs  uniswapv3.rs  uniswapv3_test.rs  uniswapv4.rs  uniswapv4_test.rs
web30/src/client/: core.rs  gas.rs  misc.rs  mod.rs  net.rs  query.rs  transactions.rs
web30/src/jsonrpc/: client.rs  error.rs  mod.rs  request.rs  response.rs
web30/test_files/: complete_geth_eth_block.json  complete_geth_eth_block_2.json  complete_parity_eth_block.json  complete_xdai_block.json  concise_geth_eth_block.json  concise_geth_eth_block_2.json  concise_parity_eth_block.json  eth_A40AFB_block.json
