[workspace]
resolver = "2"

members = [
    "clarity",
    "web30",
    "soliloquy",
    "soliloquy/json-abi",
    "soliloquy/sol-macro",
    "soliloquy/sol-macro-expander",
    "soliloquy/sol-macro-input",
    "soliloquy/syn-solidity",
]

[workspace.dependencies]
num256 = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
criterion = "0.5"
hex = { package = "const-hex", version = "1.14", default-features = false, features = [
    "alloc",
    "core-error",
] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
proc-macro-error2 = ">=2.0.0, <=2.0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

# used to resolve the recursive dep created by importing web30 as
# a dev dependency
[patch.crates-io]
clarity = { path = './clarity/' }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false