[package]
name = "clarity"
version = "1.4.0"
authors = ["Michał Papierski <michal@papierski.net>, Justin Kilpatrick <justin@althea.net>"]
autotests = true
include = [
    "**/*.rs",
    "Cargo.toml"
]
description = "Lightweight Ethereum client"
repository = "https://github.com/althea-net/clarity"
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde = "1.0"
num-traits = "0.2"
sha3 = "0.10"
secp256k1 = { version = "0.28", features = ["recovery"] }
serde_derive = "1.0"
num256 = {workspace = true}

[[test]]
name = "transaction_tests"
harness = false

[dev-dependencies]
rand = "0.8"
rustc-test = "0.3.0"
serde_json = "1.0"
serde_yaml = "0.9"
criterion = "0.5"
openssl = {version = "0.10", features = ["vendored"]}
web30 = "1.1"

[[bench]]
name = "crypto_bench"
harness = true
