[package]
name = "alloy-json-abi"
description = "Full Ethereum JSON-ABI implementation"
keywords = ["ethereum", "abi", "json", "serde", "serialization"]
categories = ["encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/json-abi"

edition.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[dependencies]
alloy-sol-type-parser = { path = "../sol-type-parser", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
sha3.workspace = true
num256.workspace = true

[dev-dependencies]
criterion.workspace = true
ethabi = "18"
serde_json.workspace = true

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_json?/std",
]
serde_json = ["dep:serde_json"]

[[bench]]
name = "json_abi"
path = "benches/json_abi.rs"
harness = false
