[package]
name = "alloy-sol-macro-expander"
description = "Expander used in the Solidity to Rust procedural macro"
keywords = ["ethereum", "abi", "encoding", "evm", "solidity"]
categories = ["encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/sol-macro-expander"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]


[dependencies]
alloy-sol-macro-input = { path = "../sol-macro-input" }
syn-solidity = { path = "../syn-solidity", features = ["visit", "visit-mut"] }

proc-macro-error2.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["extra-traits"] }


heck = "0.5"
hex.workspace = true
indexmap = "2"
tiny-keccak.workspace = true

# json
alloy-json-abi = { path = "../json-abi", optional = true }

[features]
json = ["dep:alloy-json-abi", "alloy-sol-macro-input/json"]
