[package]
name = "alloy-sol-macro-input"
description = "Input types for sol!-like macros"
keywords = ["ethereum", "abi", "encoding", "evm", "solidity"]
categories = ["encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/sol-macro-input"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[dependencies]
dunce = "1.0.4"
heck = "0.5.0"
hex.workspace = true
proc-macro2.workspace = true
syn.workspace = true
syn-solidity = { path = "../syn-solidity" }
quote.workspace = true

# json
alloy-json-abi = { path = "../json-abi", optional = true }
serde_json = { workspace = true, optional = true }

[features]
json = ["dep:alloy-json-abi", "dep:serde_json"]
