[package]
name = "alloy-sol-macro"
description = "Solidity to Rust procedural macro"
keywords = ["ethereum", "abi", "encoding", "evm", "solidity"]
categories = ["encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/sol-macro"

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]


[dependencies]
alloy-sol-macro-input = { path = "../sol-macro-input" }
alloy-sol-macro-expander = { path = "../sol-macro-expander" }

proc-macro-error2.workspace = true
proc-macro2.workspace = true
quote = "1.0"
syn = { workspace = true, features = ["extra-traits"] }

[features]
json = ["alloy-sol-macro-expander/json"]
