[package]
name = "alloy-sol-macro"
description = "Solidity to Rust procedural macro"
keywords = ["ethereum", "abi", "encoding", "evm", "solidity"]
categories = ["encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/sol-macro"

edition.workspace = true

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]


[dependencies]
syn-solidity = { path = "../syn-solidity", features = ["visit", "visit-mut"] }
alloy-json-abi = { path = "../json-abi" }

tiny-keccak.workspace=true
proc-macro-error2.workspace = true
proc-macro2.workspace = true
quote = "1.0"
syn = { workspace = true, features = ["extra-traits"] }
serde_json.workspace=true
dunce = "1.0.4"
heck = "0.5.0"
hex.workspace = true
indexmap = "2"