[package]
name = "syn-solidity"
description = "syn-powered Solidity parser"
keywords = ["ethereum", "evm", "syn", "solidity", "ast"]
categories = ["data-structures", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/syn-solidity"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[dependencies]
paste = "1.0"
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["extra-traits"] }

[features]
visit = []
visit-mut = []
