[package]
name = "contract-abigen"
authors = [
    "Nicholas Rodrigues Lordello <nlordell@gmail.com>",
    "Georgios Konstantopoulos <me@gakonst.com>",
]
readme = "README.md"
description = "Code generation for type-safe bindings to Ethereum smart contracts"

edition.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[dependencies]
soliloquy-core.workspace = true

proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
prettyplease = { version = "0.2", features = ["verbatim"] }

Inflector = "0.11"
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
dunce = "1.0"
walkdir = "2.3"
eyre = "0.6"
regex = "1.9"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
