[package]
name = "alloy-sol-macro"
description = "Solidity to Rust procedural macro"
keywords = ["ethereum", "abi", "encoding", "evm", "solidity"]
categories = ["encoding", "cryptography::cryptocurrencies"]
homepage = "https://github.com/alloy-rs/core/tree/main/crates/sol-macro"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[lints]
workspace = true

[dependencies]
alloy-sol-macro-input = { path = "../sol-macro-input" }
alloy-sol-macro-expander = { path = "../sol-macro-expander" }

proc-macro-error2 = ">=2.0.0, <=2.0.1"
proc-macro2 = "1.0'
quote = "1.0"
syn = { version = "2.0, features = ["extra-traits"] }

[features]
json = ["alloy-sol-macro-expander/json"]
